--- a/suporte.html
+++ b/suporte.html
@@ -57,7 +57,7 @@
         <div class="contact-info">
             <h2>Entre em Contato</h2>
             <p>Se as perguntas acima не resolveram sua dúvida ou se você encontrou um bug, a melhor maneira de obter ajuda é nos enviando um e-mail.</p>
-            <p><strong>E-mail de Suporte:</strong> <strong>[Seu e-mail de contato]</strong></p>
+            <p><strong>E-mail de Suporte:</strong> <strong>derecklemeloja@gmail.com</strong></p>
             <p>Procuramos responder a todos os e-mails em até 48 horas úteis.</p>
         </div>
     </div>
